--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/DarulkarimLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog Build</title>
+    <meta
+    name="description"
+    content="Dugsiga Darulkarim waa xarun waxbarasho oo ku dadaasha inay ardaydeeda siiso waxbarasho tayo leh oo ku saleysan qiimaha diinta iyo dhaqanka."
+  />
+    <title> Darulkarim Primary & Secondary School</title>
   </head>
   <body>
     <div id="root"></div>
